--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <p class="signUpText">Sign Up</p>
         </div>
       </div>
-      <!-- <img src="vectors/Group 119.png" alt="" class="vector1" />
+      <img src="vectors/Group 119.png" alt="" class="vector1" />
       <img src="vectors/Group 100.png" alt="" class="vector2" />
       <img src="vectors/Group 100.png" alt="" class="vector3" />
-      <img src="vectors/Vector.png" alt="" class="vector4" /> -->
+      <img src="vectors/Vector.png" alt="" class="vector4" />
       <div class="mainBody">
         <div class="bannerSection">
           <div class="bannerTexts">
@@ -86,10 +86,10 @@
       </div>
     </div>
     <div class="bodySection">
-      <!-- <img src="vectors/Group 110.png" alt="" class="vector5" />
+      <img src="vectors/Group 110.png" alt="" class="vector5" />
       <img src="vectors/Group.png" alt="" class="vector6" />
       <img src="vectors/Group 112.png" alt="" class="vector7" />
-      <img src="vectors/Vector (1).png" alt="" class="vector8" /> -->
+      <img src="vectors/Vector (1).png" alt="" class="vector8" />
       <div class="outerTab">
         <div class="outerTabItemsLocation">
           <img src="Icons/Frame.png" alt="" class="outerTabLocationIcon"/>
@@ -201,12 +201,13 @@
           </div>
         </div>
       </div>
-      <!-- <img src="vectors/Group 113.png" alt="" class="vector9" />
+      <img src="vectors/Group 113.png" alt="" class="vector9" />
       <img src="vectors/Group 114.png" alt="" class="vector10" />
       <img src="vectors/Group 115.png" alt="" class="vector11" />
       <img src="vectors/Group 116.png" alt="" class="vector12" />
       <img src="vectors/Group 118.png" alt="" class="vector13" />
-      <img src="vectors/Vector (3).png" alt="" class="vector14" /> -->
+      <img src="vectors/Vector (3).png" alt="" class="vector14" />
+      <img src="vectors/Group 102.png" alt="" class="vector16" />
       <div class="team">
         <div class="teamSection">
           <div class="teamTexts">
@@ -350,6 +351,7 @@
               alt=""
               class="socialIcon"
             />
+            <span></span>
             <img
               src="Icons/socialIcons/Group 99.png"
               alt=""
@@ -375,12 +377,13 @@
               alt=""
               class="socialIcon"
             />
+            <span></span>
           </div>
         </div>
       </div>
     </div>
     <div class="footer">
-      <!-- <img src="vectors/Group (1).png" alt="" class="vector15" /> -->
+      <img src="vectors/Group (1).png" alt="" class="vector15" />
       <div class="footerSection">
         <div class="footerTexts">
           <p class="footerMainText">Contact Us</p>
